# UmbraCore

./: .bazelrc  .bazelrc.local  .bazelrc.swift  .codecov.yml  .deps.json  .gitattributes  .gitignore  .jazzy.yaml  .snyk  .swiftformat  .swiftlint.yml  20250310_120327.json  BUILD.bazel  BUILD.bazel.addition  CNAME  MODULE.bazel  Package.resolved  Package.swift  README.md  README_build_system.md  ROADMAP.md  STASHED_CHANGES.md  STRUCTURE.md  SWIFT_6_MIGRATION_GUIDE.md  TEST_MIGRATION_PLAN.md  TOOLS_README.md  UmbraCore.md  UmbraCore_Project_Status.md  UmbraCore_Refactoring_Plan.md  XPCBridge_Circular_Dependency_Resolution.md  XPC_PROTOCOLS_MIGRATION_GUIDE.md  XPC_SECURITY_ERROR_RESOLUTION.md  analyze_build.py  analyze_build.sh  analyze_build_failures.py  aquery.txt  backup_cleanup_log.txt  bazel_analyzer  bazel_dependency_analyzer.sh  benchmark_m2max.sh  (+126 more)
Examples/: BUILD.bazel  ExamplesMain.swift  README.md  SecurityBridgeDTOExample.swift
Examples/ErrorHandling/: BUILD.bazel  ErrorHandlingExample.swift  ErrorLoggingExample.swift
Examples/SecurityInterfaces/: BUILD.bazel  ExampleSecurityProvider.swift  SecurityDTOExamples.swift
Examples/Services/: BUILD.bazel  ServicesDTOExample.swift
Examples/UmbraErrors/: BUILD.bazel  ErrorHandlingExamples.swift
Examples/UmbraSecurity/: FoundationIndependentExample.swift
Examples/XPCMigration/: BUILD.bazel  SECURITY_BRIDGE_DTO_MIGRATION_GUIDE.md  SecurityBridgeDTOExample.swift  SecurityBridgeDTOTests.swift  XPCMigrationExamples.swift
Examples/XPCProtocolsCore/: BUILD.bazel  ExampleDTOXPCService.swift  ExampleXPCService.swift  MigrationExamples.swift  README.md
Sources/API/: API.swift  BUILD.bazel  UmbraAPI.swift
Sources/Autocomplete/: AutocompleteProtocol.swift  BUILD.bazel  README.md
Sources/Autocomplete/Protocols/: AutocompleteProtocol.swift  BUILD.bazel
Sources/BinaryData/: BUILD.bazel
Sources/BinaryData/Sources/: BinaryData.swift
Sources/BinaryData/Tests/: BinaryDataTests.swift
Sources/BinaryStream/: BUILD.bazel
Sources/BinaryStream/Sources/: BinaryStream.swift
Sources/BinaryStream/Tests/: BinaryStreamTests.swift
Sources/Config/: BUILD.bazel  Config.swift  README.md
Sources/Config/Protocols/: BUILD.bazel  ConfigurationProtocol.swift
Sources/Core/: BUILD.bazel  Core.swift  Core_Aliases.swift
Sources/Core/Extensions/: TimeInterval+Extensions.swift
Sources/Core/Services/: BUILD.bazel  CoreService.swift  CryptoError.swift  CryptoService.swift  KeyManager.swift  SecurityError.swift  SecurityService.swift  (+2 more)
Sources/CoreDTOs/: BUILD.bazel
Sources/CoreErrors/: BUILD  BUILD.bazel  CoreErrors_Extensions.swift  CryptoError.swift  CryptoErrorMapper.swift  KeyManagerError.swift  LoggingError.swift  RepositoryError.swift  ResourceError.swift  SecurityError.swift  SecurityErrorMapper.swift  ServiceError.swift  XPCErrors_Extensions.swift
Sources/CoreServicesTypesNoFoundation/: BUILD.bazel  KeyMetadata.swift  KeyStatus.swift  ServiceState.swift  StorageLocation.swift
Sources/CoreTypes/: BUILD.bazel  BinaryData.swift  ByteArray.swift  SecurityErrorBase.swift  SecurityProtocolsCoreIsolation.swift  SecurityProtocolsCoreTypes.swift  SecurityProviderBase.swift  XPCProtocolsCoreIsolation.swift  XPCProtocolsCoreTypes.swift  XPCServiceAdapter.swift  XPCServiceProtocolBase.swift
Sources/CoreTypesImplementation/: BUILD.bazel
Sources/CoreTypesInterfaces/: BUILD.bazel
Sources/CryptoServiceProtocol/: BUILD.bazel  CryptoServiceProtocol.swift
Sources/CryptoSwiftFoundationIndependent/: BUILD.bazel  CryptoWrapper.swift  SecureBytesExtension.swift
Sources/CryptoTypes/: BUILD.bazel  CRYPTO_XPC_MIGRATION_GUIDE.md  CryptoTypes.swift
Sources/ErrorHandling/: ARCHITECTURE.md  BUILD.bazel  ErrorHandling.swift  README.md  STYLE_GUIDE.md  USAGE.md
Sources/Features/: BUILD.bazel  Features.swift
Sources/FilePath/: BUILD.bazel
Sources/FoundationBridgeTypes/: BUILD.bazel  DataBridge.swift  URLBridge.swift
Sources/LoggingWrapper/: BUILD.bazel  LogLevel.swift  Logger.swift
Sources/Mocks/: BUILD.bazel  MockKeychain.swift  MockSecurityProvider.swift  MockURLProvider.swift
tools/: BUILD.bazel  README.md  README_MACOS_TARGET.md  analyse_modules.sh  bazel_analyze.sh  create_module.sh  dependency_analyzer.sh  error_mapper_checker.go  fix_critical_deps.sh  fix_dependencies.sh  generate_build_files.sh  module_analyser.go  run_migration.sh  secure_bytes_migration.go  standardize_build_files.py  update_build_files.sh  workspace_status.sh
tools/bazel/: BUILD.bazel  docc.bzl  swift_defaults.bzl
tools/build_defs/: BUILD.bazel  umbracore_gen_module.bzl  umbracore_module.bzl
tools/error_analyzer/: README.md  error_analyzer  go.mod  main.go  run_analysis.sh
tools/error_migrator/: MIGRATION_GUIDE.md  Makefile  README.md  USAGE_GUIDE.md  apply_migration.sh  code_generator.go  complete_migration.sh  config.go  config_example.json  create_core_errors_module.sh  error_migration_strategy.md  error_migrator  go.mod  integration_test.go  main.go  migration_config.json  migration_planner.go  migration_test.go  model.go  report_parser.go  run_migration.sh  test_error_migrator.sh  update_build_files.sh
tools/gazelle/: BUILD.bazel  gazelle.go
tools/go/: BUILD.bazel  Makefile  README.md  go.mod
tools/namespace_analyzer/: README.md
tools/protocolanalyzer/: go.mod  main.go
tools/scripts/: README_deprecation_tools.md  README_security_cleanup.md  bazel_analyze.go  build_affected.sh  build_docc.sh  build_prod.sh  build_test.sh  fix_build_errors.py  fix_protocol_references.py  remove_redundant_modules.sh  run_all_foundation_free_tests.sh  run_foundation_free_tests.sh  security_module_cleanup  security_module_cleanup.go  security_module_removal  security_module_removal.go  umbracore_loc_analyzer.go  umbracore_report_generator.go  update_build_files.sh  update_build_macros.sh
tools/security_module_consolidator/: README.md  main.go
tools/swift/: BUILD.bazel  DocC-README.md  build_rules.bzl  build_settings.bzl  compiler_options.bzl  docc_gen.sh  docc_rules.bzl  preview_docc.sh  serve_docc.sh
tools/umbra_restructurer/: README.md  main.go
(+1490 files in other folders)
