load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

# gazelle:prefix github.com/mpy-dev-ml/UmbraCore
gazelle(
    name = "gazelle",
    command = "fix",
)

package(default_visibility = ["//visibility:public"])

platform(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

string_flag(
    name = "cpu",
    build_setting_default = "darwin_arm64",
)
