package(default_visibility = ["//visibility:public"])

# This directory contains example code that is not meant to be built
# with the main project. It's excluded from continuous integration
# builds and tests to prevent interference with the main codebase.
#
# If you need to build or test these examples, you can do so explicitly:
# bazel build //Examples/...
# bazel test //Examples/...

load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

# This is a meta-package that includes all examples
swift_library(
    name = "Examples",
    srcs = glob(["**/*.swift"]),
)

# Collect all example targets
filegroup(
    name = "all_examples",
    srcs = [
        "//Examples/Services:ServicesDTOExample",
    ],
)

# Test suite for any example tests
test_suite(
    name = "example_tests",
    tests = [
        # Add any actual test targets here
    ],
)
