package(default_visibility = ["//visibility:public"])

# This directory contains example code that is not meant to be built
# with the main project. It's excluded from continuous integration
# builds and tests to prevent interference with the main codebase.
#
# If you need to build or test these examples, you can do so explicitly:
# bazel build //Examples/...
# bazel test //Examples/...

load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary", "swift_library")

# Library of examples that can be imported elsewhere
swift_library(
    name = "ExamplesLib",
    srcs = glob(["**/*.swift"]),
    deps = [
        "//Sources/ErrorHandling",
        "//Sources/ErrorHandling/Domains:ErrorHandlingDomains",
        "//Sources/SecurityBridge",
        "//Sources/SecurityProtocolsCore",
        "//Sources/UmbraCoreTypes",
    ],
)

# Executable example target
swift_binary(
    name = "Examples",
    deps = [":ExamplesLib"],
    srcs = ["ExamplesMain.swift"],
)

# Collect all example targets
filegroup(
    name = "all_examples",
    srcs = [
        ":ExamplesLib",
        ":Examples",
    ],
)

# Test suite for any example tests
test_suite(
    name = "example_tests",
    tests = [
        # Add any actual test targets here
    ],
)
