package(default_visibility = ["//visibility:public"])

# This directory contains example code that is not meant to be built
# with the main project. It's excluded from continuous integration
# builds and tests to prevent interference with the main codebase.
#
# If you need to build or test these examples, you can do so explicitly:
# bazel build //Examples/...
# bazel test //Examples/...

load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary", "swift_library")

# IMPORTANT: Examples are disabled from main build due to dependency changes
# When you need to build them, update the dependencies and re-enable.
# Library of examples that can be imported elsewhere
filegroup(
    name = "ExamplesLib",
    srcs = glob(["**/*.swift"]),
)

# Executable example target - disabled
filegroup(
    name = "Examples",
    srcs = ["ExamplesMain.swift"],
)

# Comment explaining why examples are disabled
# Examples were disabled because they depend on modules that have undergone
# significant architectural changes, including UmbraSecurity, SecurityService,
# and various other modules. The examples will need to be updated to work with
# the new architecture before they can be re-enabled.
