load("//tools/build_defs:umbracore_gen_module.bzl", "umbracore_gen_module")

package(default_visibility = ["//visibility:public"])

# Target to generate the SecureString module
umbracore_gen_module(
    name = "gen_secure_string",
    module_name = "SecureString",
)

# Target to generate the URLPath module
umbracore_gen_module(
    name = "gen_url_path",
    module_name = "URLPath",
)

# Target to generate a TimeTypes module
umbracore_gen_module(
    name = "gen_time_types",
    module_name = "TimeTypes",
)
