load("//:bazel/macros/swift.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "ErrorHandlingExamples",
    srcs = glob(["*.swift"]),
    enable_library_evolution = True,
    tags = ["manual"],  # Mark as manual so it won't be built by default
    deps = [
        "//Sources/ErrorHandling/Common:ErrorHandlingCommon",
        "//Sources/ErrorHandling/Interfaces:ErrorHandlingInterfaces",
        "//Sources/ErrorHandling/Logging:ErrorHandlingLogging",
        "//Sources/LoggingWrapper:LoggingWrapper",
    ],
)
