load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

# This is an example that demonstrates using ServicesDTOAdapter
# It's not intended to be used in production code

swift_library(
    name = "ServicesDTOExample",
    srcs = [
        "ServicesDTOExample.swift",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/CoreDTOs",
        "//Sources/Services",
        "//Sources/Services/ServicesDTOAdapter",
        "//Sources/UmbraCoreTypes",
        "//Sources/ErrorHandling",
    ],
)
