load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

# This is an example that demonstrates using ServicesDTOAdapter
# It's not intended to be used in production code
# IMPORTANT: Example is temporarily disabled due to dependency changes

# Disabled example - use filegroup instead of swift_library
filegroup(
    name = "ServicesDTOExample",
    srcs = [
        "ServicesDTOExample.swift",
    ],
    visibility = ["//visibility:public"],
)

# Original dependencies that would be needed when re-enabling:
# deps = [
#     "//Sources/CoreDTOs",
#     "//Sources/Services",
#     "//Sources/Services/ServicesDTOAdapter",
#     "//Sources/UmbraCoreTypes",
#     "//Sources/ErrorHandling",
# ]
