load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "API",
    srcs = [
        "API.swift",
        "UmbraAPI.swift",
    ],
    copts = [
        "-target",
        "arm64-apple-macos14.0",
        "-strict-concurrency=complete",
        "-enable-actor-data-race-checks",
        "-warn-concurrency",
    ],
    module_name = "API",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/Core",
        "//Sources/ErrorHandling",
        "//Sources/UmbraLogging",
    ],
)
