load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//:bazel/macros/swift.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "Autocomplete",
    srcs = ["AutocompleteProtocol.swift"],
    deps = [
        "//Sources/Autocomplete/Protocols",
        "//Sources/ErrorHandling",
        "//Sources/UmbraLogging",
    ],
)
