load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "Config",
    srcs = glob(["**/*.swift"]),
    module_name = "Config",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/Core",
        "//Sources/SecurityTypes",
    ],
    copts = [
        "-strict-concurrency=complete",
        "-warn-concurrency",
        "-enable-actor-data-race-checks",
    ],
)
