load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "Core",
    srcs = glob([
        "*.swift",
        "Services/*.swift",
    ], allow_empty = True),
    copts = [
        "-target",
        "arm64-apple-macos14.0",
        "-strict-concurrency=complete",
        "-warn-concurrency",
        "-enable-actor-data-race-checks",
    ],
    module_name = "Core",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/SecurityTypes",
        "@swiftpkg_cryptoswift//:CryptoSwift",
    ],
)
