load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "Core",
    srcs = glob(["**/*.swift"]),
    module_name = "Core",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/CryptoTypes",
        "//Sources/CryptoTypes/Protocols:CryptoTypesProtocols",
        "//Sources/CryptoTypes/Types:CryptoTypesTypes",
        "//Sources/ErrorHandling",
        "//Sources/ErrorHandling/Common:ErrorHandlingCommon",
        "//Sources/ErrorHandling/Models:ErrorHandlingModels",
        "//Sources/ErrorHandling/Protocols:ErrorHandlingProtocols",
        "//Sources/SecurityTypes",
        "//Sources/SecurityTypes/Protocols:SecurityTypesProtocols",
        "//Sources/SecurityTypes/Types:SecurityTypesTypes",
        "//Sources/UmbraLogging",
    ],
    copts = ["-target", "arm64-apple-macos14.0"],
)
