load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//:bazel/macros/swift.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "Core",
    srcs = glob(["**/*.swift"]),
    deps = [
        "//Sources/CryptoTypes",
        "//Sources/CryptoTypes/Protocols:CryptoTypesProtocols",
        "//Sources/CryptoTypes/Types:CryptoTypesTypes",
        "//Sources/ErrorHandling",
        "//Sources/ErrorHandling/Common:ErrorHandlingCommon",
        "//Sources/ErrorHandling/Models:ErrorHandlingModels",
        "//Sources/ErrorHandling/Protocols:ErrorHandlingProtocols",
        "//Sources/SecurityInterfaces",
        "//Sources/SecurityTypes",
        "//Sources/SecurityTypes/Protocols:SecurityTypesProtocols",
        "//Sources/SecurityTypes/Types:SecurityTypesTypes",
        "//Sources/UmbraLogging",
    ],
)
