load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_test")
load("//:bazel/macros/swift.bzl", "umbra_swift_library")
load("//tools/swift:build_rules.bzl", "umbracore_swift_library", "umbracore_swift_test_library")

package(default_visibility = ["//visibility:public"])

umbracore_swift_library(
    name = "CoreDTOs",
    srcs = glob(["Sources/**/*.swift"]),
    deps = [
        "//Sources/UmbraCoreTypes",
        "//Sources/ErrorHandling",
        "//Sources/ErrorHandling/Domains:ErrorHandlingDomains",
        "//Sources/SecurityProtocolsCore",
    ],
    visibility = ["//visibility:public"],
)
