load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//:bazel/macros/swift.bzl", "umbra_swift_library")

# Foundation-free version of CoreServicesTypes
# This module has NO Foundation dependencies to break circular dependencies
umbra_swift_library(
    name = "CoreServicesTypesNoFoundation",
    srcs = glob(["**/*.swift"]),
    deps = [
    ],
)
