load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//:bazel/macros/swift.bzl", "umbra_swift_library")

# Foundation-free base module with pure Swift types and protocols
umbra_swift_library(
    name = "CoreTypes",
    srcs = glob(["**/*.swift"]),
    deps = [
        "//Sources/SecurityProtocolsCore",
        "//Sources/SecureBytes",
        "//Sources/XPCProtocolsCore",
        "//Sources/CoreErrors",
        "//Sources/UmbraCoreTypes",
    ],
    additional_copts = [
        "-Xfrontend", "-enable-library-evolution",
    ],
)
