load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//:bazel/macros/swift.bzl", "umbra_swift_library")

# Foundation-free base module with pure Swift types and protocols
umbra_swift_library(
    name = "CoreTypesInterfaces",
    srcs = glob(["Sources/**/*.swift"]),
    deps = [
        "//Sources/CoreErrors",
    ],
    additional_copts = [
        "-Xfrontend", "-enable-library-evolution",
    ],
)

# Test library
swift_library(
    name = "CoreTypesInterfacesTests",
    testonly = True,
    srcs = glob(["Tests/**/*.swift"]),
    deps = [
        ":CoreTypesInterfaces",
        "//Sources/CoreErrors",
    ],
)
