load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//:bazel/macros/swift.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "CryptoServiceProtocol",
    srcs = glob(["*.swift"]),
    deps = [
        "//Sources/ErrorHandling",
        "//Sources/ServiceTypes",
        "//Sources/UmbraLogging",
    ],
)
