load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//tools/bazel:docc.bzl", "docc_archive")

# CryptoTypes: Core cryptographic types and services
package(default_visibility = ["//visibility:public"])

swift_library(
    name = "CryptoTypes",
    srcs = glob(["**/*.swift"]),
    module_name = "CryptoTypes",
    copts = [
        "-strict-concurrency=complete",
        "-warn-concurrency",
    ],
    deps = [
        "//Sources/SecurityTypes",
        "@swiftpkg_cryptoswift//:CryptoSwift",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["**/*.swift"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "docc_bundle",
    srcs = glob(["**/*.docc/**/*"]),
    visibility = ["//visibility:public"],
)

docc_archive(
    name = "docc_archive",
    srcs = ["sources"],
    docc_bundle = ":docc_bundle",
    module_name = "CryptoTypes",
    deps = [
        "//Sources/SecurityTypes",
        "@swiftpkg_cryptoswift//:CryptoSwift",
    ],
    display_name = "CryptoTypes",
    bundle_identifier = "com.umbra.crypto.types.documentation",
    visibility = ["//visibility:public"],
)
