load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "CryptoTypes",
    testonly = True,
    srcs = glob(["*.swift"]),
    copts = [
        "-target",
        "arm64-apple-macos14.0",
        "-strict-concurrency=complete",
        "-warn-concurrency",
        "-enable-actor-data-race-checks",
    ],
    module_name = "CryptoTypes",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/CryptoTypes/Protocols:CryptoTypes_Protocols",
        "//Sources/CryptoTypes/Services:CryptoTypes_Services",
        "//Sources/CryptoTypes/Types:CryptoTypes_Types",
        "@swiftpkg_cryptoswift//:CryptoSwift",
    ],
)
