load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "ErrorHandling",
    srcs = glob(
        [
            "*.swift",
            "Extensions/*.swift",
        ],
        allow_empty = True,
    ),
    copts = [
        "-target",
        "arm64-apple-macos14.0",
        "-strict-concurrency=complete",
        "-enable-actor-data-race-checks",
        "-warn-concurrency",
    ],
    module_name = "ErrorHandling",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/ErrorHandling/Common:ErrorHandlingCommon",
        "//Sources/ErrorHandling/Models:ErrorHandlingModels",
        "//Sources/ErrorHandling/Protocols:ErrorHandlingProtocols",
    ],
)
