load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//:bazel/macros/swift.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "ErrorHandling",
    srcs = glob(
        [
            "*.swift",
            "Extensions/*.swift",
        ],
        allow_empty = True,
    ),
    deps = [
        "//Sources/ErrorHandling/Common:ErrorHandlingCommon",
        "//Sources/ErrorHandling/Models:ErrorHandlingModels",
        "//Sources/ErrorHandling/Protocols:ErrorHandlingProtocols",
    ],
)
