load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "Features",
    srcs = glob(["**/*.swift"]),
    module_name = "Features",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/Core",
        "//Sources/Config",
    ],
    copts = [
        "-strict-concurrency=complete",
        "-warn-concurrency",
        "-enable-actor-data-race-checks",
    ],
)
