load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "Features",
    testonly = True,  # Required because it depends on UmbraTestKit
    srcs = glob(["**/*.swift"]),
    module_name = "Features",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/UmbraCore",
        "//Sources/SecurityTypes",
        "//Sources/UmbraTestKit",
        "@swiftpkg_swiftybeaver//:SwiftyBeaver",
    ],
    copts = [
        "-strict-concurrency=complete",
        "-warn-concurrency",
        "-enable-actor-data-race-checks",
    ],
)
