load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//:bazel/macros/swift.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "Features",
    srcs = glob(
        ["**/*.swift"],
        allow_empty = True,
    ),
    deps = [
        "//Sources/ErrorHandling",
        "//Sources/Features/Crypto/Models:FeaturesCryptoModels",
        "//Sources/Features/Crypto/Protocols:FeaturesCryptoProtocols",
        "//Sources/Features/Logging/Models:FeaturesLoggingModels",
        "//Sources/Features/Logging/Services:FeaturesLoggingServices",
        "//Sources/UmbraLogging",
    ],
)
