load("//tools/build_defs:umbracore_module.bzl", "umbracore_foundation_free_module")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")

umbracore_foundation_free_module(
    name = "FilePath",
    visibility = ["//visibility:public"],
)

swift_test(
    name = "FilePathTests",
    srcs = glob(["Tests/*.swift"]),
    deps = [":FilePath"],
    tags = ["manual"],
)
