load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//:bazel/macros/swift.bzl", "umbra_swift_library")

# Minimal Foundation bridge types to break circular dependencies
umbra_swift_library(
    name = "FoundationBridgeTypes",
    srcs = glob(["**/*.swift"]),
    deps = [
        "//Sources/CoreTypes",
    ],
)

# Test version for @testable import
swift_library(
    name = "FoundationBridgeTypesForTesting",
    testonly = True,
    srcs = glob(["**/*.swift"]),
    copts = [
        "-target",
        "arm64-apple-macos14.0",
        "-enable-testing",
    ],
    deps = [
        "//Sources/CoreTypes",
    ],
)
